tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_character_1__unreachable_case_character_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo
  : Character -> Int
  =
    \'h' -> 0
    \'i' -> 1
    \'i' -> 1
    \_ -> 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_character_1/unreachable_case_character_1.kk:6:6
  │
6 │     \'i' -> 1
  │      ^^^ Unreachable case
  │
  = This case is unreachable as it is already handled by previous cases.
